# GTX

./: .uuid  CMakeLists.txt  CMakeLists_original.txt  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
Libraries/: .uuid  gapbs.hpp
Libraries/parallel_hashmap/: .uuid  something.cpp
bind/: .uuid  GTX.cpp  bwgraph.cpp  bwgraph.hpp
cmake/: gtxConfig.cmake.in
core/: .uuid  after_load_consolidation_transaction.hpp  algorithm.hpp  block.cpp  block.hpp  block_access_ts_table.hpp  block_manager.hpp  bw_index.cpp  bw_index.hpp  bw_transaction.hpp  bwgraph.hpp  bwgraph_include.hpp  cleanup_txn.hpp  commit_manager.cpp  commit_manager.hpp  edge_delta_block_state_protection.hpp  edge_iterator.hpp  exceptions.hpp  graph_global.hpp  gtx_transaction.hpp  mini_bwgraph.hpp  previous_version_garbage_queue.hpp  spin_latch.hpp  transaction_tables.cpp  transaction_tables.hpp  types.hpp  utils.hpp  worker_thread_manager.hpp
examples/test_all/: CMakeLists.txt  main.cpp
examples/test_gtx/: CMakeLists.txt  GTX.hpp  main.cpp
examples/test_libtorch/: CMakeLists.txt
examples/test_pyg/: CMakeLists.txt  main.cpp  model.pt  save_model.py
src/: .uuid  after_load_consolidation_transaction.cpp  block.cpp  bw_index.cpp  bw_transaction.cpp  bwgraph.cpp  cleanup_txn.cpp  commit_manager.cpp  gtx_transaction.cpp  transaction_tables.cpp
tests/: .uuid  bw_index.cpp  bwgraph_allocation.cpp  checked_operation.cpp  main.cpp  mini_bwgraph.hpp  txn_tables.cpp
