cmake_minimum_required(VERSION 3.24)
project(GTX)

set(CMAKE_CXX_STANDARD 20)
list(APPEND CMAKE_MODULE_PATH "~/cmake_modules/FindTBB")
find_package(Threads REQUIRED)
find_package(OpenMP REQUIRED)
link_libraries(Threads::Threads)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
set(CMAKE_CXX_FLAGS_DEBUG "-ltbb -std=c++20 -g -fno-omit-frame-pointer -fopenmp -Wall -Wextra -Wnon-virtual-dtor -pedantic -Wconversion -Wlogical-op")
#set(CMAKE_CXX_FLAGS_DEBUG "-ltbb -std=c++17 -g -fno-omit-frame-pointer -Wall -Wextra -Wnon-virtual-dtor -pedantic -Wconversion -Wlogical-op -fsanitize=address,undefined")
#set(CMAKE_CXX_FLAGS_RELEASE "-O3 -ltbb -std=c++17  -g  -Wall -Wextra -Wshadow -Wnon-virtual-dtor -pedantic")
#set(CMAKE_CXX_FLAGS_RELEASE "-ltbb -std=c++17 -g -fno-omit-frame-pointer -Wall -Wextra -Wnon-virtual-dtor -pedantic -Wconversion -Wlogical-op -O3 -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "-ltbb -std=c++20 -g -fno-omit-frame-pointer -fopenmp -Wall -Wextra -Wnon-virtual-dtor -pedantic -Wconversion -Wlogical-op -O3 -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O3 -g -DNDEBUG")
#set (CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-as-needed -lprofiler -Wl,--as-needed")
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release" CACHE STRING
            "Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel." FORCE)
endif(NOT CMAKE_BUILD_TYPE)

#find_package(TBB REQUIRED PATHS /tmp/my_installed_onetbb/lib/cmake/TBB)
find_package(TBB)
add_library(parallel_hashmap_lib STATIC Libraries/parallel_hashmap/something.cpp)
target_include_directories(parallel_hashmap_lib PUBLIC parallel_hashmap)
include_directories(${PROJECT_SOURCE_DIR})
add_library(gtx_lib STATIC src/block.cpp src/transaction_tables.cpp src/bw_index.cpp src/commit_manager.cpp src/bwgraph.cpp src/gtx_transaction.cpp src/cleanup_txn.cpp src/after_load_consolidation_transaction.cpp)
set_property(TARGET gtx_lib PROPERTY POSITION_INDEPENDENT_CODE ON)
#target_include_directories(bwgraph_lib PUBLIC public core)
add_library(gtx SHARED bind/GTX.cpp src/block.cpp src/bw_index.cpp src/gtx_transaction.cpp src/bwgraph.cpp src/commit_manager.cpp src/transaction_tables.cpp src/cleanup_txn.cpp src/after_load_consolidation_transaction.cpp)
target_link_libraries(gtx gtx_lib OpenMP::OpenMP_CXX TBB::tbb)
install(TARGETS gtx DESTINATION lib)
install(FILES bind/gtx.hpp DESTINATION include)
set(PROJECT_DEPS_DIR ${PROJECT_SOURCE_DIR}/doctest)
option(BUILD_TESTING "Build the testing tree." ON)
if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_TESTING)
    add_subdirectory(doctest EXCLUDE_FROM_ALL)
    add_executable(tests
            tests/main.cpp
            tests/bw_index.cpp
            tests/txn_tables.cpp
            tests/bwgraph_allocation.cpp tests/checked_operation.cpp)
    target_link_libraries(tests gtx_lib doctest::doctest TBB::tbb parallel_hashmap_lib)
    #target_link_libraries(tests gtx_lib doctest::doctest parallel_hashmap_lib)
    enable_testing()
    include(${doctest_SOURCE_DIR}/scripts/cmake/doctest.cmake)
    doctest_discover_tests(tests)
endif()
#add_executable(BwGraph_v2 main.cpp ) #core/types.hpp core/block_manager.hpp core/utils.hpp core/block.hpp core/exceptions.hpp core/transaction_tables.cpp core/transaction_tables.hpp core/graph_global.hpp Libraries/parallel_hashmap/something.cpp
#target_link_directories(BwGraph_v2 PUBLIC core/ )
#target_link_libraries(BwGraph_v2 TBB::tbb parallel_hashmap_lib bwgraph_lib)